1.5 - Circular loading/processing image next to search button during search to know that locator is actively performing search - Zooms out when showing 1 location on initial load or search is zoomed in too close - Smoother initial loading of locations by default - Numerous CSS fixes to map interface - Ability to determine maximum number of locations shown in search results for DB health (uses same value for number of locations loaded by default)
git-svn-id: https://plugins.svn.wordpress.org/store-locator/trunk@527425 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admin.css
+++ b/admin.css
@@ -82,3 +82,53 @@ div.feedburnerFeedBlock ul li span.headline {
 	padding:7px; 
 	width:75%;
 }
+
+/* For Top Navigation Tabs */
+
+.tablist {
+    list-style:none; 
+    height:2.5em;
+    padding:0; 
+    margin:0; 
+    border-bottom: solid #5589AA 1px;
+}
+.tablist li {
+    float:left; 
+    margin-right:0.13em; 
+}
+.tablist li a {
+    display:block;
+    padding:0 1em;
+    text-decoration:none;
+    border: 1px solid gray;
+    border-bottom:0;
+    font:bold 1.1em/2.2em arial,geneva,helvetica,sans-serif;
+    color:#000;
+    background-color:#fff;
+
+    /* CSS 3 elements */
+    webkit-border-top-right-radius:0.50em;
+    -webkit-border-top-left-radius:0.50em;
+    -moz-border-radius-topright:0.50em;
+    -moz-border-radius-topleft:0.50em;
+    border-top-right-radius:0.50em;
+    border-top-left-radius:0.50em;
+}
+
+.tablist li a:hover {
+    background:white; 
+    color:maroon;
+    text-decoration:none;
+}
+.tablist li#current a {
+    background-color: #5589AA;
+    background-image: -moz-linear-gradient(center bottom , #5589AA, #619BBB);
+	text-shadow:0 -1px 0 #333333;
+    color: #fff;
+	border-bottom:none;
+	/*font-weight:bold;*/
+}
+.tablist li#current a:hover {
+	background-color: #5589AA;
+    background-image: -moz-linear-gradient(center bottom , #5589AA, #619BBB);
+}
