--- a/store-locator.css
+++ b/store-locator.css
@@ -10,13 +10,15 @@ min-width:0px !important;
 .sl_header td, .sl_header th, .sl_header tr {
 	padding:4px;
 }
-.sl_header input {
+.sl_header input, .sl_header textarea, .sl_header select, .sl_header button {
 	margin:0px;
 }
 .sl_header img {
 	background: transparent;
 } 
-
+.sl_header {
+	width:100%;
+}
 /***** Search Form Inputs  *****/
 /*#search_label {
 	whitespace:nowrap;
@@ -77,6 +79,7 @@ min-width:0px !important;
 #sl_div table, #sl_div tr, #sl_div td {
 	border:none;
 	/*padding:0px;*/
+	margin: 0px;
 }
 #sl_div #map { 
 	color:black; 
@@ -110,6 +113,7 @@ min-width:0px !important;
 .sl_footer td, .sl_footer td a, .sl_footer td a:link, .sl_footer td a:hover, .sl_footer td a:active, .sl_footer td a:visited {
 	font-weight:normal;
 	font-size:10px;
+	background-color: transparent !important;
 }
 .sl_footer {
 	background-color:black;
@@ -125,23 +129,29 @@ min-width:0px !important;
 }
 .sl_footer_right_column {
 	padding-right:5px;
-	text-align:right;
+	float:right !important;
 }
 .sl_footer_left_column {
-	text-align:left;
+	float:left !important;
 }
 
 /*****Search Results Area *****/
+.searchResultsTable {
+	width:100%;
+}
 .searchResultsTable td {
 	line-height:12px;
 	font-family: Verdana;
 	font-size:10px;
-	text-align:left;
+	text-align:left !important;
+	background-color: transparent !important;
+	padding:4px;
 }
 .text_below_map {
 	/*shown before search performed */
 	font-family:Arial;
 	padding:20px;
+	padding-left:0px;
 	font-size:18px;
 	text-align:justified;
 }
@@ -155,9 +165,13 @@ min-width:0px !important;
 	font-weight:normal;
 	text-align:justify;
 	overflow: auto;
-	height:250px;
+	height:350px;
 	font-size: 11px;
 	/*color: #000;*/
+}
+#map_sidebar_td, #map_td {
+	padding: 0px;
+	margin: 0px;
 }
 .results_entry {
 	cursor:pointer;
@@ -177,6 +191,9 @@ min-width:0px !important;
 }
 .results_row_left_column .location_name {
 	font-weight:bold;
+	font-size:16px;
+	font-family:Georgia;
+	line-height: 16px;
 }
 .results_row_center_column {
 	width:40%;
